[Planning] Release 4.2.0.1