@@ -17,6 +17,7 @@
  */
 package io.vertigo.planning.agenda.services;
 
+import java.io.Serializable;
 import java.time.DayOfWeek;
 import java.time.Instant;
 import java.time.LocalDate;
@@ -31,11 +32,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import javax.inject.Inject;
 
+import io.vertigo.account.authorization.VSecurityException;
 import io.vertigo.commons.transaction.Transactional;
 import io.vertigo.commons.transaction.VTransactionManager;
 import io.vertigo.commons.transaction.VTransactionWritable;
@@ -57,6 +60,7 @@ import io.vertigo.planning.agenda.dao.ReservationCreneauDAO;
 import io.vertigo.planning.agenda.dao.TrancheHoraireDAO;
 import io.vertigo.planning.agenda.domain.AffectionReservation;
 import io.vertigo.planning.agenda.domain.Agenda;
+import io.vertigo.planning.agenda.domain.AgendaDisplay;
 import io.vertigo.planning.agenda.domain.AgendaDisplayRange;
 import io.vertigo.planning.agenda.domain.CreationPlageHoraireForm;
 import io.vertigo.planning.agenda.domain.Creneau;
@@ -69,6 +73,7 @@ import io.vertigo.planning.agenda.domain.PublicationTrancheHoraireForm;
 import io.vertigo.planning.agenda.domain.ReservationCreneau;
 import io.vertigo.planning.agenda.domain.TrancheHoraire;
 import io.vertigo.planning.agenda.domain.TrancheHoraireDisplay;
+import io.vertigo.planning.domain.DtDefinitions.AgendaFields;
 import io.vertigo.planning.domain.DtDefinitions.CreationPlageHoraireFormFields;
 import io.vertigo.planning.domain.DtDefinitions.CreneauFields;
 import io.vertigo.planning.domain.DtDefinitions.DuplicationSemaineFormFields;
@@ -79,6 +84,8 @@ import io.vertigo.vega.webservice.validation.UiErrorBuilder;
 
 @Transactional
 public class PlanningServices implements Component {
+
+	public static final int MAX_AGENDA_TO_LOAD = 20;
 
 	private static final int CREATE_MIN_DUREE_PLAGE_MINUTE = 60;
 	private static final int CREATE_MAX_DUREE_PLAGE_HEURE = 10;
@@ -118,10 +125,7 @@ public class PlanningServices implements Component {
 		return createdAgenda;
 	}
 
-	public PlageHoraire createPlageHoraire(final UID<Agenda> agendaUid, final CreationPlageHoraireForm creationPlageHoraireForm) {
-		final var agenda = agendaDAO.readOneForUpdate(agendaUid); //ForUpdate pour éviter les doublons
-		//security filter
-
+	public PlageHoraire createPlageHoraire(final CreationPlageHoraireForm creationPlageHoraireForm, final AgendaDisplayRange agendaDisplayRange) {
 		/** Contrôles User */
 		final var uiErrorBuilder = new UiErrorBuilder();
 		final var decalageJours = ChronoUnit.DAYS.between(LocalDate.now(), creationPlageHoraireForm.getDateLocale());
@@ -159,9 +163,13 @@ public class PlanningServices implements Component {
 			uiErrorBuilder.addError(creationPlageHoraireForm, CreationPlageHoraireFormFields.dateLocale,
 					LocaleMessageText.of("Il n'est pas possible de créer une plage le dimanche"));
 		}
+		//---
+
+		final var ageId = checkAuthorizedAgenda(UID.of(Agenda.class, creationPlageHoraireForm.getAgeId()), agendaDisplayRange);
+		final var agenda = agendaDAO.readOneForUpdate(ageId); //ForUpdate pour éviter les doublons
 
 		final var firstPlageConflict = plageHoraireDAO.getExistsConflictingPlageHoraire(
-				(Long) agendaUid.getId(),
+				agendaDisplayRange.getAgeIds(),
 				creationPlageHoraireForm.getDateLocale(),
 				creationPlageHoraireForm.getMinutesDebut(),
 				creationPlageHoraireForm.getMinutesFin());
@@ -219,10 +227,8 @@ public class PlanningServices implements Component {
 		return trancheHoraire;
 	}
 
-	public void duplicateSemaine(final UID<Agenda> ageUid, final DuplicationSemaineForm duplicationSemaineForm) {
-		final var agenda = agendaDAO.readOneForUpdate(ageUid); //ForUpdate pour éviter les doublons
+	public void duplicateSemaine(final List<UID<Agenda>> ageUids, final DuplicationSemaineForm duplicationSemaineForm, final Map<UID<Agenda>, Integer> dureeTranchePerAgenda) {
 		//security filter
-
 		final var uiErrorBuilder = new UiErrorBuilder();
 		uiErrorBuilder.checkFieldDateAfterOrEquals(duplicationSemaineForm, DuplicationSemaineFormFields.dateLocaleFromDebut, DuplicationSemaineFormFields.dateLocaleFromFin,
 				LocaleMessageText.of("La date de fin de la selection à copier doit être postérieur à la date de début"));
@@ -256,8 +262,12 @@ public class PlanningServices implements Component {
 		uiErrorBuilder.throwUserExceptionIfErrors();
 		/*****/
 
+		//on lock tous les agendas concernés : Attention ça peut locker la table !!
+		ageUids.forEach(ageUid -> agendaDAO.readOneForUpdate(ageUid)); //ForUpdate pour éviter les doublons
+		final var ageIds = ageUids.stream().map(UID::getId).map(Long.class::cast).toList();
+		final var ageIdsArray = ageIds.toArray(Serializable[]::new);
 		final var plageHorairesFrom = plageHoraireDAO.findAll(
-				Criterions.isEqualTo(PlageHoraireFields.ageId, ageUid.getId())
+				Criterions.in(PlageHoraireFields.ageId, ageIdsArray)
 						.and(Criterions.isGreaterThanOrEqualTo(PlageHoraireFields.dateLocale, duplicationSemaineForm.getDateLocaleFromDebut()))
 						.and(Criterions.isLessThanOrEqualTo(PlageHoraireFields.dateLocale, duplicationSemaineForm.getDateLocaleFromFin())),
 				DtListState.of(null, 0, PlageHoraireFields.dateLocale.name(), false));
@@ -265,11 +275,11 @@ public class PlanningServices implements Component {
 			//erreur bloquante
 			throw new VUserException("La semaine que vous souhaitez dupliquer n'a aucune plage horaire");
 		}
-		final var closedTranchesHorairesFrom = trancheHoraireDAO.getTrancheHorairesFermeesByAgeIds(List.of((Long) ageUid.getId()),
+		final var closedTranchesHorairesFrom = trancheHoraireDAO.getTrancheHorairesFermeesByAgeIds(ageIds,
 				duplicationSemaineForm.getDateLocaleFromDebut(), duplicationSemaineForm.getDateLocaleFromFin());
 
 		final var previousPlageHorairesTo = plageHoraireDAO.findAll(
-				Criterions.isEqualTo(PlageHoraireFields.ageId, ageUid.getId())
+				Criterions.in(PlageHoraireFields.ageId, ageIdsArray)
 						.and(Criterions.isGreaterThanOrEqualTo(PlageHoraireFields.dateLocale, duplicationSemaineForm.getDateLocaleToDebut()))
 						.and(Criterions.isLessThanOrEqualTo(PlageHoraireFields.dateLocale, duplicationSemaineForm.getDateLocaleToFin())),
 				DtListState.of(null, 0, PlageHoraireFields.dateLocale.name(), false));
@@ -278,15 +288,14 @@ public class PlanningServices implements Component {
 				.collect(Collectors.groupingBy(plh -> plh.getDateLocale().getDayOfWeek()));
 
 		final Map<LocalDate, List<PlageHoraire>> mapPreviousPlagesHorairesToPerLocalDate = previousPlageHorairesTo.stream()
-				.collect(Collectors.groupingBy(plh -> plh.getDateLocale()));
+				.collect(Collectors.groupingBy((Function<? super PlageHoraire, ? extends LocalDate>) PlageHoraire::getDateLocale));
 
 		final Map<DayOfWeek, List<TrancheHoraire>> mapClosedTranchesHorairesFromPerDayOfWeek = closedTranchesHorairesFrom.stream()
 				.collect(Collectors.groupingBy(trh -> trh.getDateLocale().getDayOfWeek()));
 
 		final var plageHorairesToCreate = new DtList<>(PlageHoraire.class);
 		final var trancheHoraires = new DtList<>(TrancheHoraire.class);
-
-		final int dureeTrancheMinute = duplicationSemaineForm.getDureeCreneau();
+		//final int dureeTrancheMinute = duplicationSemaineForm.getDureeCreneau();
 		for (var d = 0; d < dureeDuplicationJours + 1; ++d) { //+1 => date de fin incluse
 			final var currentCopyDate = duplicationSemaineForm.getDateLocaleToDebut().plusDays(d);
 			final var plageHorairesCopyFrom = mapPlagesHorairesFromPerDayOfWeek.get(currentCopyDate.getDayOfWeek());
@@ -304,7 +313,7 @@ public class PlanningServices implements Component {
 				}
 				//sinon on crée la plage
 				final var plageHoraire = new PlageHoraire();
-				plageHoraire.agenda().setUID(agenda.getUID());
+				plageHoraire.agenda().setUID(plageHoraireFrom.agenda().getUID());
 				plageHoraire.setDateLocale(currentCopyDate);
 				plageHoraire.setMinutesDebut(plageHoraireFrom.getMinutesDebut());
 				plageHoraire.setMinutesFin(plageHoraireFrom.getMinutesFin());
@@ -321,7 +330,10 @@ public class PlanningServices implements Component {
 			plageHoraireDAO.save(plageHoraire);
 			//cette fois l'id de la plage existe et peut être associée dans la FK des tranches
 			//RDV-351 : il faut vérifier les tranches supprimées
-			trancheHoraires.addAll(createTrancheHoraires(plageHoraire, dureeTrancheMinute, mapClosedTranchesHorairesFromPerDayOfWeek.getOrDefault(plageHoraire.getDateLocale().getDayOfWeek(), Collections.emptyList())));
+			final Integer dureeCreneauAgenda = dureeTranchePerAgenda.get(plageHoraire.agenda().getUID());
+			Assertion.check().isNotNull(dureeCreneauAgenda, "La durée de créneau n'est pas définie pour l'agenda {0}", plageHoraire.agenda().getUID());
+			trancheHoraires.addAll(createTrancheHoraires(plageHoraire, dureeCreneauAgenda,
+					mapClosedTranchesHorairesFromPerDayOfWeek.getOrDefault(plageHoraire.getDateLocale().getDayOfWeek(), Collections.emptyList())));
 		}
 		trancheHoraireDAO.batchInsertTrancheHoraire(trancheHoraires);
 	}
@@ -359,12 +371,37 @@ public class PlanningServices implements Component {
 		return agendaDAO.get(ageUid);
 	}
 
-	public DtList<PlageHoraireDisplay> getPlageHoraireDisplayByAgenda(final UID<Agenda> agendaUid, final LocalDate firstDate, final LocalDate lastDate) {
-		Assertion.check().isNotNull(agendaUid)
+	public DtList<Agenda> getAgendas(final List<UID<Agenda>> ageUids) {
+		Assertion.check()
+				.isNotNull(ageUids)
+				.isTrue(ageUids.size() > 0, "Aucun agenda à charger")
+				.isTrue(ageUids.size() <= MAX_AGENDA_TO_LOAD, "Too much agenda to load, max {}", MAX_AGENDA_TO_LOAD);
+		//---
+		final Serializable[] ageIds = ageUids.stream().map(UID::getId).toArray(Serializable[]::new);
+		return agendaDAO.findAll(Criterions.in(AgendaFields.ageId, ageIds), DtListState.defaultOf(Agenda.class));
+	}
+
+	public DtList<AgendaDisplay> getAgendasDisplay(final List<UID<Agenda>> ageUids) {
+		final var agendas = getAgendas(ageUids);
+		return agendas.stream()
+				.map(agenda -> {
+					final var agendaDisplay = new AgendaDisplay();
+					agendaDisplay.setAgeId(agenda.getAgeId());
+					agendaDisplay.setName(agenda.getNom());
+					return agendaDisplay;
+				})
+				.collect(VCollectors.toDtList(AgendaDisplay.class));
+	}
+
+	public DtList<PlageHoraireDisplay> getPlageHoraireDisplayByAgendas(final List<UID<Agenda>> ageUids, final LocalDate firstDate, final LocalDate lastDate) {
+		Assertion.check().isNotNull(ageUids)
 				.isNotNull(firstDate)
-				.isNotNull(lastDate);
+				.isNotNull(lastDate)
+				.isTrue(ageUids.size() > 0, "Aucun agenda à charger")
+				.isTrue(ageUids.size() <= MAX_AGENDA_TO_LOAD, "Too much agenda to load, max {}", MAX_AGENDA_TO_LOAD);
 		//--
-		return agendaPAO.getPlageHoraireDisplayByAgeId((Long) agendaUid.getId(), firstDate, lastDate, Instant.now());
+		final var ageIds = ageUids.stream().map(UID::getId).map(Long.class::cast).toList();
+		return agendaPAO.getPlageHoraireDisplayByAgeIds(ageIds, firstDate, lastDate, Instant.now());
 	}
 
 	/**
@@ -375,7 +412,7 @@ public class PlanningServices implements Component {
 	 * @param firstDate Première date de la période à simuler
 	 * @return Liste des plages horaires par défaut
 	 */
-	public DtList<DefaultPlageHoraire> getDefaultPlageHoraireByAgenda(final UID<Agenda> agendaUid, final LocalDate minusMonths, final LocalDate firstDate) {
+	public DtList<DefaultPlageHoraire> getDefaultPlageHoraireByAgenda(final List<UID<Agenda>> ageUids, final LocalDate minusMonths, final LocalDate firstDate) {
 
 		//default
 		final DtList<DefaultPlageHoraire> defaultPlageHoraires = new DtList<>(DefaultPlageHoraire.class);
@@ -406,32 +443,31 @@ public class PlanningServices implements Component {
 		return defaultPlageHoraire;
 	}
 
-	public PlageHoraireDisplay getPlageHoraireDisplay(final UID<Agenda> agendaUid, final UID<PlageHoraire> plageUid) {
+	public PlageHoraireDisplay getPlageHoraireDisplay(final UID<PlageHoraire> plageUid) {
 		Assertion.check()
-				.isNotNull(agendaUid)
 				.isNotNull(plageUid);
 		//-----
 		return agendaPAO.getPlageHoraireDisplayByPlhId((Long) plageUid.getId(), Instant.now());
 	}
 
-	public DtList<TrancheHoraireDisplay> getTrancheHoraireDisplayByPlage(final UID<Agenda> agendaUid, final UID<PlageHoraire> plageUid) {
+	public DtList<TrancheHoraireDisplay> getTrancheHoraireDisplayByPlage(final UID<PlageHoraire> plageUid) {
 		Assertion.check()
-				.isNotNull(agendaUid)
 				.isNotNull(plageUid);
 		//-----
 		return agendaPAO.getTrancheHoraireDisplayByPlhId((Long) plageUid.getId(), Instant.now());
 	}
 
-	public DtList<PlageHoraireDisplay> getReservationOrphelines(final UID<Agenda> ageUid, final LocalDate firstDate, final LocalDate lastDate) {
-		return agendaPAO.countUnlinkReservationPerXminByAgeId((Long) ageUid.getId(), firstDate, lastDate, ORPHAN_RESERVATION_AGG_MINUTES);
+	public DtList<PlageHoraireDisplay> getReservationOrphelines(final List<UID<Agenda>> ageUids, final LocalDate firstDate, final LocalDate lastDate) {
+		final var ageIds = ageUids.stream().map(UID::getId).map(Long.class::cast).toList();
+		return agendaPAO.countUnlinkReservationPerXminByAgeId(ageIds, firstDate, lastDate, ORPHAN_RESERVATION_AGG_MINUTES);
 	}
 
-	public LocalDate getPremierJourLibrePourDuplication(final UID<Agenda> ageUid, final AgendaDisplayRange agendaRange) {
+	public LocalDate getPremierJourLibrePourDuplication(final AgendaDisplayRange agendaRange) {
 		//on prend soit la date du jour soit la date de début de la source + 1 semaine
 		final var localDateTo = LocalDate.now().isAfter(agendaRange.getLastDate()) ? LocalDate.now() : agendaRange.getFirstDate().plusWeeks(1);
 
 		final var firsts = agendaPAO.getFirstLocalDatesFreeOfPlageHorairePerDayOfWeek(
-				(Long) ageUid.getId(),
+				agendaRange.getAgeIds(),
 				agendaRange.getFirstDate(),
 				agendaRange.getLastDate(),
 				localDateTo,
@@ -455,6 +491,29 @@ public class PlanningServices implements Component {
 			//on a pas trouvé de creneau disponible à cette date
 			return Optional.empty();
 
+		}
+
+		final var creneau = creneauOpt.get();
+		creneau.trancheHoraire().load();
+		final var trancheHoraire = creneau.trancheHoraire().get();
+		//---
+
+		final var reservationCreneau = prepareReservationCreneau(trancheHoraire);
+		reservationCreneauDAO.create(reservationCreneau);
+
+		creneau.reservationCreneau().setUID(reservationCreneau.getUID());
+		creneauDAO.save(creneau);
+		//---
+		return Optional.of(reservationCreneau);
+	}
+
+	public Optional<ReservationCreneau> reserverCreneau(final List<UID<Agenda>> ageUids, final LocalDate startDate, final LocalDate endDate, final Integer startMinutes, final Integer endMinutes) {
+		// Trouver un créneau sur une liste d'agenda avec des critères de sélection : on utilise le mecanisme de lock de la BDD (for update skip locks)
+		final var ageIds = ageUids.stream().map(UID::getId).map(Long.class::cast).toList();
+		final var creneauOpt = creneauDAO.selectCreneauForUpdateByAgeIds(ageIds, startDate, endDate, startMinutes, endMinutes, Instant.now());
+		if (creneauOpt.isEmpty()) {
+			//on a pas trouvé de creneau disponible à cette date
+			return Optional.empty();
 		}
 
 		final var creneau = creneauOpt.get();
@@ -525,16 +584,16 @@ public class PlanningServices implements Component {
 		return reservationCreneau;
 	}
 
-	public void publishPlageHorairesAndRelinkReservation(final UID<Agenda> ageUid, final PublicationTrancheHoraireForm publicationTrancheHoraireForm) {
+	public void publishPlageHorairesAndRelinkReservation(final List<UID<Agenda>> ageUids, final PublicationTrancheHoraireForm publicationTrancheHoraireForm) {
 
 		//On change le status des trancheHoraires non publiées en masse (y compris celles planifiées)
-		publishPlageHoraires(ageUid, publicationTrancheHoraireForm);
+		publishPlageHoraires(ageUids, publicationTrancheHoraireForm);
 
 		//On pose le lien vers une reservation depuis le creneau
-		relinkReservationsToCreneaux(ageUid, publicationTrancheHoraireForm.getDateLocaleDebut(), publicationTrancheHoraireForm.getDateLocaleFin());
+		relinkReservationsToCreneaux(ageUids, publicationTrancheHoraireForm.getDateLocaleDebut(), publicationTrancheHoraireForm.getDateLocaleFin());
 	}
 
-	private void publishPlageHoraires(final UID<Agenda> ageUid, final PublicationTrancheHoraireForm publicationTrancheHoraireForm) {
+	private void publishPlageHoraires(final List<UID<Agenda>> ageUids, final PublicationTrancheHoraireForm publicationTrancheHoraireForm) {
 		//On change le status des trancheHoraires non publiées en masse (y compris celles planifiées)
 		final var uiErrorBuilder = new UiErrorBuilder();
 		final var decalageJours = ChronoUnit.DAYS.between(LocalDate.now(), publicationTrancheHoraireForm.getDateLocaleDebut());
@@ -574,7 +633,7 @@ public class PlanningServices implements Component {
 			datePublication = Instant.now().plusSeconds(PUBLISH_NOW_DELAY_S);
 		} else {
 
-			final var localTime = LocalTime.ofSecondOfDay(publicationTrancheHoraireForm.getPublicationMinutesDebut() * 60l);
+			final var localTime = LocalTime.ofSecondOfDay(publicationTrancheHoraireForm.getPublicationMinutesDebut() * 60L);
 			final var publishLocalDateTime = LocalDateTime.of(publicationTrancheHoraireForm.getPublicationDateLocale(), localTime);
 
 			//on suppose l'heure exprimée à paris par défaut
@@ -587,12 +646,13 @@ public class PlanningServices implements Component {
 		uiErrorBuilder.throwUserExceptionIfErrors();
 		/*****/
 		//on planifie
-		agendaPAO.publishTrancheHoraireByAgeId((Long) ageUid.getId(),
+		final var ageIds = ageUids.stream().map(UID::getId).map(Long.class::cast).toList();
+		agendaPAO.publishTrancheHoraireByAgeIds(ageIds,
 				publicationTrancheHoraireForm.getDateLocaleDebut(), publicationTrancheHoraireForm.getDateLocaleFin(),
 				Instant.now(), datePublication);
 
 		//on crée les créneaux en masse
-		agendaPAO.createCreneauOfPublishedTrancheHoraireByAgeId((Long) ageUid.getId(),
+		agendaPAO.createCreneauOfPublishedTrancheHoraireByAgeIds(ageIds,
 				publicationTrancheHoraireForm.getDateLocaleDebut(), publicationTrancheHoraireForm.getDateLocaleFin(),
 				datePublication);
 	}
@@ -605,8 +665,9 @@ public class PlanningServices implements Component {
 	 * @param dateLocaleDebut Date de début
 	 * @param dateLocaleFin Date de fin
 	 */
-	public void relinkReservationsToCreneaux(final UID<Agenda> ageUid, final LocalDate dateLocaleDebut, final LocalDate dateLocaleFin) {
-		final var affectations = agendaPAO.getLinkReservationAfterPublishByAgeId((Long) ageUid.getId(), dateLocaleDebut, dateLocaleFin);
+	public void relinkReservationsToCreneaux(final List<UID<Agenda>> ageUids, final LocalDate dateLocaleDebut, final LocalDate dateLocaleFin) {
+		final var ageIds = ageUids.stream().map(UID::getId).map(Long.class::cast).toList();
+		final var affectations = agendaPAO.getLinkReservationAfterPublishByAgeIds(ageIds, dateLocaleDebut, dateLocaleFin);
 		final Set<String> affectedCreneau = new HashSet<>();
 		for (final AffectionReservation affectation : affectations) {
 			final var creIdsAsString = affectation.getCreIds().split(";");
@@ -623,12 +684,11 @@ public class PlanningServices implements Component {
 	public void supprimerReservationCreneau(final List<UID<ReservationCreneau>> recUids) {
 		Assertion.check().isNotNull(recUids);
 		//---
-		agendaPAO.supprimerReservationsCreneau(
-				recUids.stream()
-						.filter(id -> id != null) //protect against bad caller
-						.map(UID::getId)
-						.map(Long.class::cast)
-						.collect(Collectors.toList()));
+		final List<Long> recIds = recUids.stream()
+				.filter(id -> id != null) //protect against bad caller
+				.map(UID::getId)
+				.map(Long.class::cast).toList();
+		agendaPAO.supprimerReservationsCreneau(recIds);
 	}
 
 	public Optional<TrancheHoraire> getTrancheHoraireIfExists(final UID<TrancheHoraire> trhUid) {
@@ -643,9 +703,9 @@ public class PlanningServices implements Component {
 	 * @param yearMonth le mois à afficher.
 	 * @return la liste d'affichage
 	 */
-	public DtList<DateDisponibleDisplay> getDateDisponibleDisplayFuturOnly(final UID<Agenda> ageUid, final YearMonth yearMonth) {
+	public DtList<DateDisponibleDisplay> getDateDisponibleDisplayFuturOnly(final List<UID<Agenda>> ageUids, final YearMonth yearMonth) {
 		Assertion.check()
-				.isNotNull(ageUid)
+				.isNotNull(ageUids)
 				.isNotNull(yearMonth);
 		//-----
 		if (yearMonth.isBefore(YearMonth.now())) { // mois passé, on affiche rien (et s'économise un appel base)
@@ -656,24 +716,26 @@ public class PlanningServices implements Component {
 		final LocalDate today = LocalDate.now();
 		final var startLocaldate = firstDayOfMonth.isBefore(today) ? today : firstDayOfMonth; // on commence pas avant la date du jour
 
-		return getDateDisponibleDisplay(ageUid, startLocaldate, yearMonth.atEndOfMonth());
+		return getDateDisponibleDisplay(ageUids, startLocaldate, yearMonth.atEndOfMonth());
 	}
 
-	public DtList<DateDisponibleDisplay> getDateDisponibleDisplay(final UID<Agenda> ageUid, final LocalDate startDate, final LocalDate endDate) {
+	public DtList<DateDisponibleDisplay> getDateDisponibleDisplay(final List<UID<Agenda>> ageUids, final LocalDate startDate, final LocalDate endDate) {
 		Assertion.check()
-				.isNotNull(ageUid)
+				.isNotNull(ageUids)
 				.isNotNull(startDate)
 				.isNotNull(endDate);
 		//-----
-		return agendaPAO.getDateDisponibleDisplayByAgeId((Long) ageUid.getId(), startDate, endDate, Instant.now());
+		final var ageIds = ageUids.stream().map(UID::getId).map(Long.class::cast).toList();
+		return agendaPAO.getDateDisponibleDisplayByAgeIds(ageIds, startDate, endDate, Instant.now());
 	}
 
-	public DtList<TrancheHoraireDisplay> getTrancheHoraireDisplayByDate(final UID<Agenda> agendaUid, final LocalDate localDate) {
+	public DtList<TrancheHoraireDisplay> getTrancheHoraireDisplayByDate(final List<UID<Agenda>> ageUids, final LocalDate localDate) {
 		Assertion.check()
-				.isNotNull(agendaUid)
+				.isNotNull(ageUids)
 				.isNotNull(localDate);
 		//-----
-		return agendaPAO.getTrancheHoraireDisplayByDate(agendaUid.getId(), localDate, Instant.now());
+		final var ageIds = ageUids.stream().map(UID::getId).map(Long.class::cast).toList();
+		return agendaPAO.getTrancheHoraireDisplayByDate(ageIds, localDate, Instant.now());
 	}
 
 	public void deleteEmptyAgenda(final UID<Agenda> agendaUid) {
@@ -688,6 +750,20 @@ public class PlanningServices implements Component {
 	public int purgeAgendaOlderThan(final LocalDate olderThan) {
 		Assertion.check().isNotNull(olderThan);
 		return agendaPAO.purgePlageHoraireByDateLocale(olderThan);
+	}
+
+	public UID<Agenda> checkAuthorizedAgendaOfPlh(final UID<PlageHoraire> plhUid, final AgendaDisplayRange agenda) {
+		final var plageHoraire = plageHoraireDAO.get(plhUid);
+		final var ageUid = UID.of(Agenda.class, plageHoraire.getAgeId());
+		return checkAuthorizedAgenda(ageUid, agenda);
+	}
+
+	public UID<Agenda> checkAuthorizedAgenda(final UID<Agenda> ageUid, final AgendaDisplayRange agenda) {
+		//check ageId in agenda.getAgeIds()
+		if (!agenda.getAgeIds().contains(ageUid.getId())) {
+			throw new VSecurityException(LocaleMessageText.of("Vous n'avez pas les droits pour agir sur cet agenda"));
+		}
+		return ageUid;
 	}
 
 }
